# complexPendulum

./: .gitignore  PendelEnv.py  README.md  actionPlot.py  angleplot2d.py  angleplot3d.py  calcParams.py  eval.py  evaltest.py  learn.py  log.py  params.xml  pyproject.toml  saveAgent.py  sim.csv  test.csv  test.py  video.py
agents/: CombinedAgent.py  LQAgent.py  ProportionalAgent.py  SwingUpAgent.py  __init__.py
assets/: EnvTypes.py  EvalSetup.py  Evaluator.py  Logger.py  __init__.py
complexPendulum/: __init__.py
complexPendulum/agents/: CombinedAgent.py  LQAgent.py  NeuralAgent.py  ProportionalAgent.py  SwingUpAgent.py  __init__.py
complexPendulum/agents/neuralAgents/: __init__.py
complexPendulum/assets/: EnvTypes.py  EvalSetup.py  Evaluator.py  Logger.py  __init__.py
complexPendulum/envs/: BaselineGainPendulumEnv.py  DirectPendulumEnv.py  EasyBaselinePendulum.py  GainPendulumEnv.py  PendelEnv.py  PendulumEnv.py  UpPendulumEnv.py  __init__.py
complexPendulum/matlab/: FrictionExp.slx  InvertedPendulumSimCtrl.slx  InvertedPendulumSimCtrlInit.m  InvertedPendulumSimCtrlOldVers.slx  PendulumParameters.m  PlotPendulum.m  RLInvertedPendulumCtrl.slx  RLInvertedPendulumCtrlBase.slx  RLInvertedPendulumCtrlDirect.slx  RLInvertedPendulumCtrlGain.slx  matlabtest.m
complexPendulum/plots/: angleplot2d.py  compareBeschl.py  compareFreeFall.py  compareSims.py  compareStep.py  controlM.csv  controlP.csv  freeM.csv  freeP.csv  friction.py  params.py  pwm.py  rewardplots.py  s0.py  swingupM.csv  swingupP.csv  train.py
plots/: rewardplots.py
(+44 files in other folders)
